--- a/index.html
+++ b/index.html
@@ -19,6 +19,10 @@
                 <canvas id="gameCanvas" width="800" height="300"></canvas>
             </div>
         </div>
+        <div id="tutorial-tooltip" class="tutorial-tooltip" style="display: none;">
+            <div id="tutorial-text">Info text here</div>
+            <div class="tooltip-arrow"></div>
+        </div>
         <div class="controls">
             <div id="dynamic-controls" class="dynamic-grid"></div>
             <div class="business-panel">
